--- a/action-a/action.yml
+++ b/action-a/action.yml
@@ -4,14 +4,14 @@ author:"octocat@github.com"
 
 inputs:
   MY_NAME:
-    description:"who to greet"
-    required:true
-    default:"world"
+    description: "who to greet"
+    required: true
+    default: "world"
 
 runs:
-  using:"docker"
-  image="Dockerfile"
+  using: "docker"
+  image: "Dockerfile"
 
 branding:
-  icon:"mic"
-  colour:"purple"
+  icon: "mic"
+  colour: "purple"
