--- a/action-a/Dockerfile
+++ b/action-a/Dockerfile
@@ -1,5 +1,5 @@
-FROM debin:9.5-slim
+FROM debian:9.5-slim
 
 ADD entrypoint.sh /entrypoint.sh
-RUM CHMOD +x /entrypoint.hs
+RUN CHMOD +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
